# sams-cookiecutter-pypackage

./: .envrc  .gitignore  .pylintrc  Pipfile  README.md  cookiecutter.json  flake.nix  gen.py  pyproject.toml  test.py  test_cookiecutter.py
.github/workflows/: main.yaml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: gen.py  live_test.sh  test.sh
stubs/: pytest.pyi  tqdm.pyi
stubs/cookiecutter/: __init__.pyi  exceptions.pyi  main.pyi
tests/: test.py  test_cookiecutter.py
{{cookiecutter.repo_name}}/: LICENSE  README.rst  cookiecutter_replay.json  flake.nix  pyproject.toml  script.py
{{cookiecutter.repo_name}}/.github/workflows/: main.yaml
{{cookiecutter.repo_name}}/tests/: test_main.py
{{cookiecutter.repository_name}}/: .bumpversion.cfg  README.rst  TODO.md  cookiecutter_selection.json  pyproject.toml
{{cookiecutter.repository_name}}/docs/: conf.py  contributing.rst  index.rst  installation.rst
{{cookiecutter.repository_name}}/res/: README.md
{{cookiecutter.repository_name}}/scripts/: docs.sh  publish.sh  test.sh
{{cookiecutter.repository_name}}/tests/: test_example.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/: __init__.py  _cli.py  _lib.py  cli.py  lib.py
