[tool.poetry]
name = "sams_cookiecutter_package"
version = "0.0.0"
description = "Cookie cutter for setting up python packages"
authors = ["Samuel Grayson <sam+dev@samgrayson.me>"]
license = "MPL-2.0"
readme = 'README.rst'
repository = "https://github.com/charmoniumQ/sams-cookiecutter-package"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
isort = "^4.3.21"
black = "^19.10b0"
pylint = "^2.5.2"
pylint-exit = "^1.1.0"
mypy = "^0.780"
poetry = "^1.0.9"
tqdm = "^4.46.1"
cookiecutter = "^1.7.2"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
