[tool.poetry]
name = "sams-cookiecutter-pypackage"
version = "0.1.0"
description = ""
authors = ["Samuel Grayson <sam+dev@samgrayson.me>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/charmoniumQ/sams-cookiecutter-pypackage"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.pylint]
# Too long for inclusion here
# see pylintrc

[tool.mypy]
strict = true
pretty = true
error_summary = true
color_output = true
#mypy_path = stubs

[tool.poetry.dev-dependencies]
typer = "^0.4.0"
pylint = "^2.11.1"
mypy = "^0.910"
pytest = "^6.2.5"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = {git = "https://github.com/cookiecutter/cookiecutter.git"}

