[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.0.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license_name}}"
readme = 'README.rst'
repository = "{{ cookiecutter.repository_http_url }}"

{%- cookiecutter.resource_directory -%}
include = ["res/"]
{%- endif -%}

[tool.poetry.scripts]
{%- if cookiecutter.enable_cli %}
rtd = "{{cookiecutter.package_name}}.cli:main"
{%- else -%}
# rtd = "package.module:function"
{%- endif -%}

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
{%- cookiecutter.autoflake -%}
autoflake = "^1.3.1"
{%- endif -%}
{%- cookiecutter.isort -%}
isort = "^4.3.21"
{%- endif -%}
{%- cookiecutter.black -%}
black = "^19.10b0"
{%- endif -%}
{%- cookiecutter.pylint %-}
pylint = "^2.5.2"
pylint-exit = "^1.1.0"
{%- endif -%}
{%- cookiecutter.bandit -%}
bandit = "^1.6.2"
{%- endif -%}
{%- cookiecutter.mypy -%}
mypy = "^0.780"
{%- endif -%}
{%- cookiecutter.pytest -%}
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
{%- endif -%}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
